--- a/app/src/main/res/layout/cliente_fragment.xml
+++ b/app/src/main/res/layout/cliente_fragment.xml
@@ -37,15 +37,14 @@
         <SearchView
             android:id="@+id/buscarCliente"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"/>
 
         <ListView
             android:id="@+id/lis_menu_clientes"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:backgroundTint="@color/white"
-            android:layout_weight="0.1"/>
+            android:backgroundTint="@color/white"/>
 
 
     </LinearLayout>
