--- a/app/src/main/res/layout/cliente_list_fragment.xml
+++ b/app/src/main/res/layout/cliente_list_fragment.xml
@@ -42,21 +42,21 @@
                 android:orientation="vertical">
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/btnEditar"
+                    android:id="@+id/btnEliminar"
                     android:layout_gravity="right"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     app:cardCornerRadius="50dp"
                     android:layout_marginTop="-25dp"
                     android:layout_marginRight="15dp"
-                    android:backgroundTint="@color/katzen_verde">
+                    android:backgroundTint="@color/red_A700">
 
                     <ImageView
 
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="4dp"
-                        android:src="@drawable/ic_edit_blanco" />
+                        android:src="@drawable/ic_delete" />
                 </androidx.cardview.widget.CardView>
 
                 <com.google.android.material.textview.MaterialTextView
