--- a/app/src/main/res/layout/paciente_fragment.xml
+++ b/app/src/main/res/layout/paciente_fragment.xml
@@ -31,89 +31,28 @@
     <LinearLayout
         android:id="@+id/cont_add_producto"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-
-        <LinearLayout
-            android:id="@+id/barraBusqueda"
+        <SearchView
+            android:id="@+id/buscarMascota"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_margin="10dp"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"/>
 
-            <!-- EditText con estilo de búsqueda -->
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/search_text_input_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white"
-                android:layout_margin="5dp"
-                android:layout_weight="0.8">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/search_edit_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:backgroundTint="@color/white"
-                    android:hint="Buscar"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <!-- Spinner con estilo de Material -->
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                android:id="@+id/textCategoria"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white"
-                android:layout_margin="5dp"
-                android:layout_weight="0.8">
-
-                <AutoCompleteTextView
-                    android:id="@+id/spCategoria"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:backgroundTint="@color/white"
-                    android:text="@string/txtField_categoria"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <!-- Botón para buscar -->
-            <ImageView
-                android:id="@+id/btnBuscar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
-                android:layout_weight="1.3"
-                android:src="@drawable/ic_search"
-                android:background="@null"
-                android:contentDescription="Buscar"/>
-
-        </LinearLayout>
-
-        <GridView
-            android:id="@+id/lis_menu_productos"
+        <ListView
+            android:id="@+id/lis_menu_mascota"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:backgroundTint="@color/white"
-            android:layout_weight="1"
-            android:numColumns="2"
-            app:layout_constraintTop_toBottomOf="@id/barraBusqueda"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_weight="1"/>
 
 
     </LinearLayout>
 
     <!-- FloatingActionButton fuera del LinearLayout, encima de todo -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btn_add_paciente"
+        android:id="@+id/btn_add_mascota"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
