--- a/app/src/main/res/layout/cliente_fragment.xml
+++ b/app/src/main/res/layout/cliente_fragment.xml
@@ -8,12 +8,7 @@
 
     <include
         android:id="@+id/fragment_no_data"
-        layout="@layout/fragment_no_data"
-        android:visibility="gone"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        layout="@layout/fragment_no_data"/>
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottieAnimationView"
