--- a/app/src/main/res/layout/fragment_no_data.xml
+++ b/app/src/main/res/layout/fragment_no_data.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
+        android:visibility="gone"
         android:orientation="vertical">
         <ImageView
             android:src="@drawable/not_results"
