--- a/app/src/main/res/layout/cliente_detalle_fragment.xml
+++ b/app/src/main/res/layout/cliente_detalle_fragment.xml
@@ -200,13 +200,29 @@
           </LinearLayout>
 
       </androidx.cardview.widget.CardView>
+
         <ListView
             android:id="@+id/lista_pacientes"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right">
+            <Button
+                android:id="@+id/btn_add_cliente"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Paciente"
+                android:drawableLeft="@drawable/ic_mas_blanco"
+                android:layout_margin="10dp"/>
+        </LinearLayout>
 
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
