--- a/app/src/main/res/layout/paciente_fragment.xml
+++ b/app/src/main/res/layout/paciente_fragment.xml
@@ -42,19 +42,20 @@
             android:backgroundTint="@color/white"
             android:layout_weight="1"/>
 
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right">
+            <Button
+                android:id="@+id/btn_add_paciente"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Paciente"
+                android:drawableLeft="@drawable/ic_mas_blanco"
+                android:layout_margin="10dp"/>
+        </LinearLayout>
 
     </LinearLayout>
-
-    <!-- FloatingActionButton fuera del LinearLayout, encima de todo -->
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btn_add_mascota"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:backgroundTint="@color/white"
-        android:background="@color/white"
-        android:src="@drawable/btn_carrito_compras"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
