--- a/app/src/main/res/layout/cliente_fragment.xml
+++ b/app/src/main/res/layout/cliente_fragment.xml
@@ -24,24 +24,29 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <LinearLayout
-        android:id="@+id/cont_add_producto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <SearchView
-            android:id="@+id/buscarCliente"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"/>
-
-        <ListView
-            android:id="@+id/lis_menu_clientes"
+        <LinearLayout
+            android:id="@+id/cont_add_producto"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:backgroundTint="@color/white"/>
+            android:orientation="vertical">
 
+            <SearchView
+                android:id="@+id/buscarCliente"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"/>
+
+            <ListView
+                android:id="@+id/lis_menu_clientes"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:backgroundTint="@color/white"/>
+        </LinearLayout>
         <LinearLayout
 
             android:layout_width="match_parent"
@@ -56,7 +61,7 @@
                 android:layout_margin="10dp"/>
         </LinearLayout>
 
-
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
