--- a/app/src/main/res/layout/paciente_fragment.xml
+++ b/app/src/main/res/layout/paciente_fragment.xml
@@ -22,28 +22,32 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
-
     <LinearLayout
-        android:id="@+id/cont_add_producto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <SearchView
-            android:id="@+id/buscarMascota"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"/>
-
-        <ListView
-            android:id="@+id/lis_menu_mascota"
+        <LinearLayout
+            android:id="@+id/cont_add_producto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:backgroundTint="@color/white"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:orientation="vertical">
 
+            <SearchView
+                android:id="@+id/buscarMascota"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"/>
+
+            <ListView
+                android:id="@+id/lis_menu_mascota"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:backgroundTint="@color/white"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
         <LinearLayout
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="right">
@@ -55,7 +59,8 @@
                 android:drawableLeft="@drawable/ic_mas_blanco"
                 android:layout_margin="10dp"/>
         </LinearLayout>
-
     </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
