--- a/app/src/main/res/layout/paciente_detalle_fragment.xml
+++ b/app/src/main/res/layout/paciente_detalle_fragment.xml
@@ -272,8 +272,9 @@
         <LinearLayout
 
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="right">
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:gravity="bottom|right">
             <Button
                 android:id="@+id/btn_add_cliente"
                 android:layout_width="wrap_content"
