--- a/app/src/main/res/layout/vista_viajes.xml
+++ b/app/src/main/res/layout/vista_viajes.xml
@@ -9,133 +9,143 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="120dp"
         app:cardCornerRadius="20dp"
         tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:orientation="horizontal" >
+            android:orientation="vertical">
             <LinearLayout
-                android:orientation="vertical"
-                android:layout_weight="1"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/katzen_verde"
+                android:orientation="horizontal"
+                android:layout_weight="2">
                 <ImageView
-                    android:src="@drawable/baseline_calendar_month_24"
-                    android:layout_width="match_parent"
-                    android:layout_weight="0.7"
+                    android:src="@drawable/ic_calendar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_margin="5dp"
-                    android:layout_height="match_parent" />
+                    android:layout_weight="1"
+                     />
                 <TextView
                     android:id="@+id/txt_mes"
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center|top"
-                    android:textColor="@color/black"
-                    android:textSize="20dp"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    app:autoSizeTextType="uniform"
+                    app:autoSizeMinTextSize="12sp"
+                    app:autoSizeMaxTextSize="20sp"
+                    android:lines="1"
+                    android:fontFamily="@font/varela"
                     android:textStyle="bold"
                     android:text="OCT"/>
             </LinearLayout>
-
             <LinearLayout
-                android:layout_weight="0.2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textStyle="bold"
-                    android:textSize="16dp"
-                    android:gravity="center"
-                    android:textColor="@color/black"
-                    android:layout_weight="1"
-                    android:text="RESUMEN"/>
-
+                android:orientation="vertical"
+                android:layout_weight="1">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_weight="0.5">
-                    <LinearLayout
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_weight="1"
                         android:gravity="center"
-                        android:layout_weight="1"
-                        android:orientation="horizontal">
+                        app:autoSizeTextType="uniform"
+                        app:autoSizeMinTextSize="10sp"
+                        app:autoSizeMaxTextSize="17sp"
+                        android:lines="1"
+                        android:fontFamily="@font/varela"
+                        android:textStyle="bold"
+                        android:text="@string/menu_costo" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:textSize="18dp"
-                            android:textStyle="bold"
-                            android:text="@string/menu_costo" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:textSize="18dp"
-                            android:textStyle="bold"
-                            android:gravity="center"
-                            android:text="@string/menu_ganancia" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:textSize="18dp"
-                            android:textStyle="bold"
-                            android:gravity="center"
-                            android:text="@string/menu_venta" />
-                    </LinearLayout>
-                    <LinearLayout
+                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:orientation="horizontal">
-                        <TextView
-                            android:id="@+id/txt_costo"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:textSize="18dp"
-                            android:textStyle="bold"
-                            android:textColor="#CD2703"
-                            android:gravity="center"
-                            android:text="@string/title_dinero" />
+                        app:autoSizeTextType="uniform"
+                        app:autoSizeMinTextSize="10sp"
+                        app:autoSizeMaxTextSize="17sp"
+                        android:lines="1"
+                        android:fontFamily="@font/varela"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:text="@string/menu_ganancia" />
 
-                        <TextView
-                            android:id="@+id/txt_ganancia"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:textStyle="bold"
-                            android:textColor="#08A1F2"
-                            android:textSize="18dp"
-                            android:text="@string/title_dinero" />
-
-                        <TextView
-                            android:id="@+id/txt_venta"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:textSize="18dp"
-                            android:textStyle="bold"
-                            android:textColor="#4CB219"
-                            android:gravity="center"
-                            android:text="@string/title_dinero" />
-                    </LinearLayout>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        app:autoSizeTextType="uniform"
+                        app:autoSizeMinTextSize="10sp"
+                        app:autoSizeMaxTextSize="18sp"
+                        android:lines="1"
+                        android:fontFamily="@font/varela"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:text="@string/menu_venta" />
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/txt_costo"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        app:autoSizeTextType="uniform"
+                        app:autoSizeMinTextSize="10sp"
+                        app:autoSizeMaxTextSize="17sp"
+                        android:lines="1"
+                        android:fontFamily="@font/varela"
+                        android:textStyle="bold"
+                        android:textColor="#CD2703"
+                        android:gravity="center"
+                        android:text="@string/title_dinero" />
 
+                    <TextView
+                        android:id="@+id/txt_ganancia"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        app:autoSizeTextType="uniform"
+                        app:autoSizeMinTextSize="10sp"
+                        app:autoSizeMaxTextSize="17sp"
+                        android:lines="1"
+                        android:fontFamily="@font/varela"
+                        android:textStyle="bold"
+                        android:textColor="#08A1F2"
+                        android:text="@string/title_dinero" />
+
+                    <TextView
+                        android:id="@+id/txt_venta"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        app:autoSizeTextType="uniform"
+                        app:autoSizeMinTextSize="10sp"
+                        app:autoSizeMaxTextSize="17sp"
+                        android:lines="1"
+                        android:fontFamily="@font/varela"
+                        android:textStyle="bold"
+                        android:textColor="#4CB219"
+                        android:gravity="center"
+                        android:text="@string/title_dinero" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
 
