--- a/app/src/main/res/layout/add_viaje_fragment.xml
+++ b/app/src/main/res/layout/add_viaje_fragment.xml
@@ -24,6 +24,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
+                    android:enabled="true"
+                    android:hint="@string/txtField_seleccion_cliente"
+                    app:startIconDrawable="@drawable/ic_pet">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/text_cliente"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/white"
+                        android:inputType="text" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     app:startIconDrawable="@drawable/ic_pet"
                     android:enabled="true"
                     android:hint="@string/txtField_domicilio">
